EG/AV4/Cmb/src/language/CmbParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g 2013-04-22 12:01:44

	package language;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CmbParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PROGRAMA", "DECLARACOES", "DECLARACAO", "STATEMENTS", "ATRIBUICAO", "THEN", "CORPO", "FUNCAO", "CAEBECALHO", "ARGUMENTOS", "INVOCACAO", "ARGS", "RETURN", "ID", "TD_INT", "TD_BOOL", "TD_STRING", "TD_VAZIO", "WRITE", "READ", "IF", "ELSE", "WHILE", "STRING", "INT", "TRUE", "FALSE", "COMMENT", "WS", "ESC_SEQ", "CHAR", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "'{'", "'}'", "'('", "')'", "','", "';'", "'='", "'-'", "'+'", "'*'", "'/'", "'%'", "'||'", "'&&'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'!'"
    };
    public static final int WHILE=26;
    public static final int OCTAL_ESC=37;
    public static final int CHAR=34;
    public static final int ID=17;
    public static final int EOF=-1;
    public static final int IF=24;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int ESC_SEQ=33;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int THEN=9;
    public static final int T__53=53;
    public static final int DECLARACOES=5;
    public static final int T__54=54;
    public static final int ARGUMENTOS=13;
    public static final int RETURN=16;
    public static final int ARGS=15;
    public static final int COMMENT=31;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int INVOCACAO=14;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int FUNCAO=11;
    public static final int UNICODE_ESC=36;
    public static final int ELSE=25;
    public static final int HEX_DIGIT=35;
    public static final int CAEBECALHO=12;
    public static final int INT=28;
    public static final int TD_STRING=20;
    public static final int TRUE=29;
    public static final int TD_VAZIO=21;
    public static final int WRITE=22;
    public static final int WS=32;
    public static final int DECLARACAO=6;
    public static final int ATRIBUICAO=8;
    public static final int CORPO=10;
    public static final int TD_INT=18;
    public static final int READ=23;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int PROGRAMA=4;
    public static final int STATEMENTS=7;
    public static final int FALSE=30;
    public static final int STRING=27;
    public static final int TD_BOOL=19;

    // delegates
    // delegators


        public CmbParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CmbParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CmbParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g"; }


    public static class programa_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "programa"
    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:36:1: programa : ( funcao )+ -> ^( PROGRAMA ( funcao )+ ) ;
    public final CmbParser.programa_return programa() throws RecognitionException {
        CmbParser.programa_return retval = new CmbParser.programa_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CmbParser.funcao_return funcao1 = null;


        RewriteRuleSubtreeStream stream_funcao=new RewriteRuleSubtreeStream(adaptor,"rule funcao");
        try {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:37:2: ( ( funcao )+ -> ^( PROGRAMA ( funcao )+ ) )
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:37:4: ( funcao )+
            {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:37:4: ( funcao )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=TD_INT && LA1_0<=TD_VAZIO)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:0:0: funcao
            	    {
            	    pushFollow(FOLLOW_funcao_in_programa107);
            	    funcao1=funcao();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_funcao.add(funcao1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: funcao
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 38:2: -> ^( PROGRAMA ( funcao )+ )
            {
                // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:38:5: ^( PROGRAMA ( funcao )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAMA, "PROGRAMA"), root_1);

                if ( !(stream_funcao.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_funcao.hasNext() ) {
                    adaptor.addChild(root_1, stream_funcao.nextTree());

                }
                stream_funcao.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "programa"

    public static class funcao_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "funcao"
    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:41:1: funcao : cabecalho '{' corpo_funcao '}' -> ^( FUNCAO cabecalho corpo_funcao ) ;
    public final CmbParser.funcao_return funcao() throws RecognitionException {
        CmbParser.funcao_return retval = new CmbParser.funcao_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal3=null;
        Token char_literal5=null;
        CmbParser.cabecalho_return cabecalho2 = null;

        CmbParser.corpo_funcao_return corpo_funcao4 = null;


        Object char_literal3_tree=null;
        Object char_literal5_tree=null;
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_cabecalho=new RewriteRuleSubtreeStream(adaptor,"rule cabecalho");
        RewriteRuleSubtreeStream stream_corpo_funcao=new RewriteRuleSubtreeStream(adaptor,"rule corpo_funcao");
        try {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:42:2: ( cabecalho '{' corpo_funcao '}' -> ^( FUNCAO cabecalho corpo_funcao ) )
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:42:4: cabecalho '{' corpo_funcao '}'
            {
            pushFollow(FOLLOW_cabecalho_in_funcao129);
            cabecalho2=cabecalho();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_cabecalho.add(cabecalho2.getTree());
            char_literal3=(Token)match(input,38,FOLLOW_38_in_funcao131); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_38.add(char_literal3);

            pushFollow(FOLLOW_corpo_funcao_in_funcao133);
            corpo_funcao4=corpo_funcao();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_corpo_funcao.add(corpo_funcao4.getTree());
            char_literal5=(Token)match(input,39,FOLLOW_39_in_funcao135); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_39.add(char_literal5);



            // AST REWRITE
            // elements: cabecalho, corpo_funcao
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 43:2: -> ^( FUNCAO cabecalho corpo_funcao )
            {
                // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:43:5: ^( FUNCAO cabecalho corpo_funcao )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FUNCAO, "FUNCAO"), root_1);

                adaptor.addChild(root_1, stream_cabecalho.nextTree());
                adaptor.addChild(root_1, stream_corpo_funcao.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "funcao"

    public static class cabecalho_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "cabecalho"
    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:46:1: cabecalho : tipo ID '(' ( argumentos )? ')' -> ^( CAEBECALHO tipo ID ( argumentos )? ) ;
    public final CmbParser.cabecalho_return cabecalho() throws RecognitionException {
        CmbParser.cabecalho_return retval = new CmbParser.cabecalho_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID7=null;
        Token char_literal8=null;
        Token char_literal10=null;
        CmbParser.tipo_return tipo6 = null;

        CmbParser.argumentos_return argumentos9 = null;


        Object ID7_tree=null;
        Object char_literal8_tree=null;
        Object char_literal10_tree=null;
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_tipo=new RewriteRuleSubtreeStream(adaptor,"rule tipo");
        RewriteRuleSubtreeStream stream_argumentos=new RewriteRuleSubtreeStream(adaptor,"rule argumentos");
        try {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:47:2: ( tipo ID '(' ( argumentos )? ')' -> ^( CAEBECALHO tipo ID ( argumentos )? ) )
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:47:4: tipo ID '(' ( argumentos )? ')'
            {
            pushFollow(FOLLOW_tipo_in_cabecalho158);
            tipo6=tipo();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_tipo.add(tipo6.getTree());
            ID7=(Token)match(input,ID,FOLLOW_ID_in_cabecalho160); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID7);

            char_literal8=(Token)match(input,40,FOLLOW_40_in_cabecalho162); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_40.add(char_literal8);

            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:47:16: ( argumentos )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=TD_INT && LA2_0<=TD_VAZIO)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:0:0: argumentos
                    {
                    pushFollow(FOLLOW_argumentos_in_cabecalho164);
                    argumentos9=argumentos();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_argumentos.add(argumentos9.getTree());

                    }
                    break;

            }

            char_literal10=(Token)match(input,41,FOLLOW_41_in_cabecalho167); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_41.add(char_literal10);



            // AST REWRITE
            // elements: ID, tipo, argumentos
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 48:2: -> ^( CAEBECALHO tipo ID ( argumentos )? )
            {
                // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:48:5: ^( CAEBECALHO tipo ID ( argumentos )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CAEBECALHO, "CAEBECALHO"), root_1);

                adaptor.addChild(root_1, stream_tipo.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:48:26: ( argumentos )?
                if ( stream_argumentos.hasNext() ) {
                    adaptor.addChild(root_1, stream_argumentos.nextTree());

                }
                stream_argumentos.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "cabecalho"

    public static class argumentos_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argumentos"
    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:51:1: argumentos : declaracao ( ',' declaracao )* -> ^( ARGUMENTOS ( declaracao )+ ) ;
    public final CmbParser.argumentos_return argumentos() throws RecognitionException {
        CmbParser.argumentos_return retval = new CmbParser.argumentos_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal12=null;
        CmbParser.declaracao_return declaracao11 = null;

        CmbParser.declaracao_return declaracao13 = null;


        Object char_literal12_tree=null;
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleSubtreeStream stream_declaracao=new RewriteRuleSubtreeStream(adaptor,"rule declaracao");
        try {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:52:2: ( declaracao ( ',' declaracao )* -> ^( ARGUMENTOS ( declaracao )+ ) )
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:52:4: declaracao ( ',' declaracao )*
            {
            pushFollow(FOLLOW_declaracao_in_argumentos192);
            declaracao11=declaracao();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_declaracao.add(declaracao11.getTree());
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:52:15: ( ',' declaracao )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==42) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:52:16: ',' declaracao
            	    {
            	    char_literal12=(Token)match(input,42,FOLLOW_42_in_argumentos195); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_42.add(char_literal12);

            	    pushFollow(FOLLOW_declaracao_in_argumentos197);
            	    declaracao13=declaracao();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_declaracao.add(declaracao13.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);



            // AST REWRITE
            // elements: declaracao
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 53:2: -> ^( ARGUMENTOS ( declaracao )+ )
            {
                // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:53:5: ^( ARGUMENTOS ( declaracao )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARGUMENTOS, "ARGUMENTOS"), root_1);

                if ( !(stream_declaracao.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_declaracao.hasNext() ) {
                    adaptor.addChild(root_1, stream_declaracao.nextTree());

                }
                stream_declaracao.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "argumentos"

    public static class corpo_funcao_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "corpo_funcao"
    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:56:1: corpo_funcao : declaracoes statements -> ^( CORPO declaracoes statements ) ;
    public final CmbParser.corpo_funcao_return corpo_funcao() throws RecognitionException {
        CmbParser.corpo_funcao_return retval = new CmbParser.corpo_funcao_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        CmbParser.declaracoes_return declaracoes14 = null;

        CmbParser.statements_return statements15 = null;


        RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"rule statements");
        RewriteRuleSubtreeStream stream_declaracoes=new RewriteRuleSubtreeStream(adaptor,"rule declaracoes");
        try {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:57:2: ( declaracoes statements -> ^( CORPO declaracoes statements ) )
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:57:4: declaracoes statements
            {
            pushFollow(FOLLOW_declaracoes_in_corpo_funcao220);
            declaracoes14=declaracoes();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_declaracoes.add(declaracoes14.getTree());
            pushFollow(FOLLOW_statements_in_corpo_funcao222);
            statements15=statements();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_statements.add(statements15.getTree());


            // AST REWRITE
            // elements: statements, declaracoes
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 58:2: -> ^( CORPO declaracoes statements )
            {
                // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:58:5: ^( CORPO declaracoes statements )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CORPO, "CORPO"), root_1);

                adaptor.addChild(root_1, stream_declaracoes.nextTree());
                adaptor.addChild(root_1, stream_statements.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "corpo_funcao"

    public static class declaracoes_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "declaracoes"
    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:61:1: declaracoes : ( declaracao ';' )+ -> ^( DECLARACOES ( declaracao )+ ) ;
    public final CmbParser.declaracoes_return declaracoes() throws RecognitionException {
        CmbParser.declaracoes_return retval = new CmbParser.declaracoes_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal17=null;
        CmbParser.declaracao_return declaracao16 = null;


        Object char_literal17_tree=null;
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleSubtreeStream stream_declaracao=new RewriteRuleSubtreeStream(adaptor,"rule declaracao");
        try {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:62:2: ( ( declaracao ';' )+ -> ^( DECLARACOES ( declaracao )+ ) )
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:62:4: ( declaracao ';' )+
            {
            // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:62:4: ( declaracao ';' )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=TD_INT && LA4_0<=TD_VAZIO)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/nunooliveira/Documents/Nuno/Academic/Aulas/2012_2013_1_EG_MEI/2013_04_22/tabid/Cmb/resources/Cmb.g:62:5: declaracao ';'
            	    {
            	    pushFollow(FOLLOW_declaracao_in_declaracoes245);
            	    declaracao16=declaracao();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_declaracao.add(declaracao16.getTree());
            	    char_literal17=(Token)match(input,43,FOLLOW_43_in_declaracoes247); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_43.add(char_literal17);


            	    }
            	    break;
